[package]
name = "keyring-ima-signer"
version = "0.1.0"
authors = ["Patrick Uiterwijk <patrick@puiterwijk.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
sha1 = "0.6.0"
sha2 = "0.9.2"
xattr = "0.2.2"
openssl = "0.10.31"
keyutils = { git = "https://github.com/mathstuf/rust-keyutils", branch = "master" }
